[gd_scene load_steps=51 format=2]

[ext_resource path="res://Assets/enemies/walk.png" type="Texture" id=1]
[ext_resource path="res://Assets/enemies/dead.png" type="Texture" id=2]
[ext_resource path="res://enemy.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 297, 219 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 297, 0, 297, 219 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 594, 0, 297, 219 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 891, 0, 297, 219 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1188, 0, 297, 219 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1485, 0, 297, 219 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 219, 297, 219 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 297, 219, 297, 219 )

[sub_resource type="AtlasTexture" id=77]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 594, 219, 297, 219 )

[sub_resource type="AtlasTexture" id=78]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 891, 219, 297, 219 )

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1188, 219, 297, 219 )

[sub_resource type="AtlasTexture" id=80]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1485, 219, 297, 219 )

[sub_resource type="AtlasTexture" id=81]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 438, 297, 219 )

[sub_resource type="AtlasTexture" id=82]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 297, 438, 297, 219 )

[sub_resource type="AtlasTexture" id=83]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 594, 438, 297, 219 )

[sub_resource type="AtlasTexture" id=84]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 891, 438, 297, 219 )

[sub_resource type="AtlasTexture" id=85]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1188, 438, 297, 219 )

[sub_resource type="AtlasTexture" id=86]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1485, 438, 297, 219 )

[sub_resource type="AtlasTexture" id=87]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 657, 297, 219 )

[sub_resource type="AtlasTexture" id=88]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 297, 657, 297, 219 )

[sub_resource type="AtlasTexture" id=89]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 594, 657, 297, 219 )

[sub_resource type="AtlasTexture" id=90]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 891, 657, 297, 219 )

[sub_resource type="AtlasTexture" id=91]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1188, 657, 297, 219 )

[sub_resource type="AtlasTexture" id=92]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1485, 657, 297, 219 )

[sub_resource type="AtlasTexture" id=93]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 212, 189 )

[sub_resource type="AtlasTexture" id=94]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 212, 0, 212, 189 )

[sub_resource type="AtlasTexture" id=95]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 424, 0, 212, 189 )

[sub_resource type="AtlasTexture" id=96]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 636, 0, 212, 189 )

[sub_resource type="AtlasTexture" id=97]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 848, 0, 212, 189 )

[sub_resource type="AtlasTexture" id=98]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 189, 212, 189 )

[sub_resource type="AtlasTexture" id=99]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 212, 189, 212, 189 )

[sub_resource type="AtlasTexture" id=100]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 424, 189, 212, 189 )

[sub_resource type="AtlasTexture" id=101]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 636, 189, 212, 189 )

[sub_resource type="AtlasTexture" id=102]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 848, 189, 212, 189 )

[sub_resource type="AtlasTexture" id=103]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 378, 212, 189 )

[sub_resource type="AtlasTexture" id=104]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 212, 378, 212, 189 )

[sub_resource type="AtlasTexture" id=105]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 424, 378, 212, 189 )

[sub_resource type="AtlasTexture" id=106]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 636, 378, 212, 189 )

[sub_resource type="AtlasTexture" id=107]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 848, 378, 212, 189 )

[sub_resource type="AtlasTexture" id=108]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 567, 212, 189 )

[sub_resource type="AtlasTexture" id=109]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 212, 567, 212, 189 )

[sub_resource type="AtlasTexture" id=110]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 424, 567, 212, 189 )

[sub_resource type="AtlasTexture" id=111]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 636, 567, 212, 189 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ) ],
"loop": false,
"name": "dead",
"speed": 30.0
}, {
"frames": [ SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ) ],
"loop": true,
"name": "walk",
"speed": 26.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19.5, 19.25 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 15.5, 5 )

[sub_resource type="RectangleShape2D" id=68]
extents = Vector2( 26, 16.5 )

[node name="enemy" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}
detects_cliffs = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 14 )
animation = "walk"
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 0
position = Vector2( 3.5, 7.75 )
shape = SubResource( 1 )

[node name="flooer_checker" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 35 )
collision_mask = 2

[node name="top_checher" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_checher"]
position = Vector2( 1.5, -20 )
shape = SubResource( 15 )

[node name="side_checker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="side_checker"]
position = Vector2( 3, 6.5 )
shape = SubResource( 68 )

[node name="Timer0" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Label" type="Label" parent="."]
margin_left = -13.0
margin_top = -43.0
margin_right = 27.0
margin_bottom = -29.0
text = "50"

[node name="Timer1" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="top_checher" to="." method="_on_top_checher_body_entered"]
[connection signal="body_entered" from="side_checker" to="." method="_on_side_checker_body_entered"]
[connection signal="timeout" from="Timer0" to="." method="_on_Timer0_timeout"]
[connection signal="timeout" from="Timer1" to="." method="_on_Timer1_timeout"]
